--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-pytest==3.9.1
-flake8==3.5.0
-numpy==1.15.2
-tensorflow-gpu==1.11.0
-scipy==1.1.0
-Pillow==5.3.0
-requests==2.20.0
-googledrivedownloader==0.3
-tqdm==4.28.0
+pytest==5.2.1
+flake8==3.7.8
+numpy==1.17.3
+tensorflow==1.15.0
+scipy==1.3.1
+Pillow==6.2.1
+requests==2.22.0
+googledrivedownloader==0.4
+tqdm==4.36.1
